# ertai

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: build.yml  publish.yml
src/ertai/: __init__.py  card.py  creature.py  mana.py
tests/: test_card.py  test_colors.py  test_creature.py  test_land.py  test_mana.py  test_version.py
